[package]
name = "rayon_logs"
version = "0.1.3"
authors = ["frederic wagner <frederic.wagner@imag.fr>", "Quentin Guilloteau <quentin.guilloteau@grenoble-inp.org>"]
description = "Traces for the rayon work-stealing library"
license = "Apache-2.0/MIT"
repository = "https://github.com/wagnerf42/rayon-logs"
readme = "README.md"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]
edition = "2018"

[profile.release]
debug = true

[features]
# enable this to log hardware events on x86. This is optional because it requires nightly.
perf = ["perfcnt", "x86"]

[dependencies]
lazy_static = "^1.4"
rayon="^1"
serde="^1"
serde_json="^1"
serde_derive="^1"
itertools="^0"
rand="^0.7"
libc="^0.2"
x86={version="^0.19", optional=true}
perfcnt={version="^0.5", optional=true}

[dev-dependencies]
criterion="^0.2"
